--- a/Topic_modelling_new.ipynb
+++ b/Topic_modelling_new.ipynb
@@ -5734,6 +5734,36 @@
         "\n",
         "5. Upon looking at the top n topics generated, we were able to correlate it with relevance to what was expected at a significant degree, whilst also shedding light on some unseen aspects.. Hence, we see that the model effectively beared fruit."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to C:\\Users\\daniel\n",
+            "[nltk_data]     mensah\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import nltk\n",
+        "nltk.download('stopwords')"
+      ]
     }
   ],
   "metadata": {
